# validate-pyproject-schema-store

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: auto-release.yml  bump.yml  cd.yml  ci.yml
docs/: conf.py  index.md
src/validate_pyproject_schema_store/: __init__.py  schema.py
src/validate_pyproject_schema_store/resources/: cibuildwheel.schema.json  extra.json  fastapi.schema.json  hatch.schema.json  maturin.schema.json  mypy.schema.json  partial-dfc.schema.json  partial-pdm-dockerize.schema.json  pdm.schema.json  pixi.schema.json  poe.schema.json  poetry.schema.json  pyright.schema.json  pytest.schema.json  repo-review.schema.json  ruff.schema.json  scheduled.schema.json  scikit-build.schema.json  setuptools.schema.json  taskipy.schema.json  tombi.schema.json  tool.json  tox.schema.json  ty.schema.json  uv.schema.json
tests/: conftest.py  test_package.py  test_validate_pyproject.py
tools/: sync.py
